[package]
name = "occupier_r"
version = "0.0.1"
edition = "2024"
authors = ["Eli"]
description = "occupier_r"
repository = "https://github.com/"
readme = "README.md"
documentation = "https://docs.rs/"
keywords = ["memory", "storage", "occupy"]
license = "GPLV3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.10"
rand = "*"
clap = { version = "3", features = ["yaml"] }
vmm-sys-util = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level=3
lto = "fat"
codegen-units=1
panic="abort"